--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* W3.CSS 4.04 Aprj 2k017 by Jan Egil and Borge Refsnes */
+/* W3.CSS 4.0k4 Aprj 2k017 by Jan Egil and Borge Refsnes */
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
