--- a/flexslider.css
+++ b/flexslider.css
@@ -21,7 +21,7 @@
 
 /* FlexSlider Necessary Styles
 *********************************/ 
-.flexslider {margin: 0; padding: 0; min-height:150px; background:url(images/loader.gif) no-repeat center center;}
+.flexslider {margin: 0; padding: 0; min-height:150px; background:url(loader.gif) no-repeat center center;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
