--- a/basic-style.css
+++ b/basic-style.css
@@ -4,7 +4,7 @@ Simple Responsive Template v 1.2
 
 primary styles 
    Author: www.prowebdesign.ro
-   Add your own styles to customize the project.
+   Add your own styles to customize theg project.
 
 
 
