--- a/basic-style.css
+++ b/basic-style.css
@@ -29,7 +29,6 @@ h1, h2, h3, h4, h5, h6{
 	padding:0;
 } 
 
-header.wrapper.clearfix {background-color:red;}
 
 
 /* links */
@@ -192,7 +191,7 @@ footer ul{
 
 /*colors and backgrounds*/
 body{
-	background:#fff;
+	background:red;
 }
 h1, h2, h3, h4, h5, h6{
 	color:#333; 
