--- a/basic-style.css
+++ b/basic-style.css
@@ -191,7 +191,7 @@ footer ul{
 
 /*colors and backgrounds*/
 body{
-	background-color:red;
+	background-color:#fff;
 }
 h1, h2, h3, h4, h5, h6{
 	color:#333; 
