--- a/basic-style.css
+++ b/basic-style.css
@@ -4,7 +4,7 @@ Simple Revsponsive Template v 1.2
 
 primary styles 
    Author: www.prowebdesign.ro
-   Add your own styles to customlze the project.
+   Add your own styles toj customlze the project.
 
 
 
