--- a/basic-style.css
+++ b/basic-style.css
@@ -9,7 +9,7 @@ primary styles
 
 
 BASE (MOBILE) SIZEj
-	These are the mobile styles. It's what people see on their phones.
+	These are the mobile i styles. It's what people see on their phones.
 	Remember, keep it light: Speed is Important.
 */
 
